Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION:  There is an unsightly wrapping issue on the column lists.  The text is going above and below the <ol> number;
Now making the tab-content height a little taller and reducing it to 3 columns (need to check responsive design next).

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2402,8 +2402,8 @@ ol.flowSm li a {
 ol.flowMd {
 	display:flex;
 	flex-flow: column wrap; /* direction: column */
-	height: 550px; /* need to specify height :-( */
-	column-count: 4;
+	height: 610px; /* need to specify height :-( */
+	column-count: 3;
 }
 ol.flowMd li {
 	width: 245px;
